# swgprof

./: Cargo.toml  README.md  test.sh  test1.sh  test2.sh
shell_bak/: gcp.sh  switch.sh
src/: main.rs  t.rs  tmp2.rs
